Frontend + Backend "connected", working login and registration menu
